Fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 
 #actionPanel {
 	position: relative;
-	height: 100%;
+	height: 86%;
 	width: 100%;
 }
 
@@ -80,18 +80,12 @@ nav, .navbar {
 /* ==Directions Info Pane== */ 
 #infoPane {
 	height: 100%;
-	padding: 0 5% 7% 0;
+	padding: 0 5% 6% 0;
 	margin-top: 7%;
 }
 
 .info {
 	border: 1px solid white;
-}
-
-#mapButton {
-    position: relative;
-	top: -50px;
-	visibility: hidden;
 }
 
 .tabTop {
@@ -103,12 +97,6 @@ nav, .navbar {
 	border-radius: 0 !important;
 }
 
-#detailButton {
-	position: relative;
-	top: -50px;
-	visibility: hidden;
-}
-
 .tabBottom {
 	width: 30%;
 	padding: 3px;
@@ -117,6 +105,10 @@ nav, .navbar {
 	border-radius: 0 !important;
 }
 
+.anchor {
+	position: relative;
+	top: -10%;
+}
 	/* ??Search Group?? */
 	#searchHeader, #searchHeader>tr, #searchHeader>tr>td{
 		display: block;
@@ -316,7 +308,7 @@ nav, .navbar {
 	/* ??Main Map?? */
 	#mapColumn {
 		height: 100%;
-		padding: 0 5% 7% 0;
+		padding: 0 5% 6% 0;
 		margin-top: 7%
 	}
 
